# ParticleSimulation

./: .gitignore  CMakeLists.txt  config.toml
include/: Config.hpp
include/math/: Geometry.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp
include/physic/: Collision.hpp  ParticleSystem.hpp  World.hpp
src/: main.cpp
src/visualization/: Renderer.cpp
